GOnt Montserrat y Parametrizacion de Colores

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ flutter:
     - assest/img/bagheera.gif
     - assest/img/agsch-headerr.png
 
+
+fonts:
+  - family: Montserrat
+    fonts:
+      - asset: fonts/Montserrat-Regular.ttf
+      - asset: fonts/Montserrat-Italic.ttf
+        style: italic
+
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
