--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
     - assets/img/
     - assets/img/inicial/
     - assets/img/locations/
+    - assets/img/subcampos/
     - assets/icon/
     - assets/fonts/
     - assets/json/
