--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   progress_dialog: ^1.2.0
   google_maps_flutter: ^0.5.21+12  #Biblioteca para desplegar mapas.
   geolocator: ^5.1.5  #Biblioteca para capturar ubicacion
+  android_intent: ^0.3.4+7
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
