--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   google_maps_flutter: ^0.5.21+12  #Biblioteca para desplegar mapas.
   geolocator: ^5.1.5  #Biblioteca para capturar ubicacion
   android_intent: ^0.3.4+7
-  
+  tinycolor: ^1.0.2 # Permite manejar los colores para oscurecerlos o aclararlos.
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
