--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   android_intent: ^0.3.4+7
   tinycolor: ^1.0.2 # Permite manejar los colores para oscurecerlos o aclararlos.
   timeline_list: ^0.0.3
+  photo_view: ^0.9.0
 
 dev_dependencies:
   flutter_test:
