modifica ubicacion de jks

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=DECR2004vania
 keyPassword=DECR2004vania
 keyAlias=key
-storeFile=../key.jks
+storeFile=/Users/dcaceres/Projects/scouts/jamboree/key.jks
