--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,6 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Pasaporte Jamboree 2020"
@@ -33,6 +31,8 @@
         </activity>
         <meta-data android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyADlEw55CHdOxASNo9A9GnTE0Pt-1s8ayM"/>
-
     </application>
+    <uses-permission android:name="android.permisssion.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permisssion.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permisssion.INTERNET"></uses-permission>
 </manifest>
