--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,14 +15,16 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Permite obtener tu posicion para calcular la distancia a los campamentos y servicios</string>
+	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Permite obtener tu posicion para calcular la distancia a los campamentos y servicios</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Permite obtener tu posicion para calcular la distancia a los campamentos y servicios</string>
