--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,19 +10,15 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
 
-  page_transition: ^1.1.5
-  shared_preferences: ^0.5.3
+  #page_transition: ^1.1.5
   carousel_pro: ^1.0.0
   cached_network_image: ^1.1.3   #Cache para imagenes cuando no hay conexion
   flutter_cache_manager: ^1.1.3 # Administrador de cache para flutter
-  auto_size_text: ^2.1.0
   flutter_html: ^0.11.0  #Conversor de htl para desplegar contenido
- # sembast: ^2.1.1   #Base de datos
-  flutter_platform_widgets: ^0.20.2
+ # flutter_platform_widgets: ^0.20.2
   progress_dialog: ^1.2.0
   google_maps_flutter: ^0.5.21+12  #Biblioteca para desplegar mapas.
   geolocator: ^5.1.5  #Biblioteca para capturar ubicacion
-  android_intent: ^0.3.4+7
   tinycolor: ^1.0.2 # Permite manejar los colores para oscurecerlos o aclararlos.
   timeline_list: ^0.0.3
   photo_view: ^0.9.0
